--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,19 @@
 asgiref==3.6.0
+attrs==22.2.0
 Django==4.1.7
+django-rest-auth==0.9.5
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+drf-spectacular==0.25.1
+inflection==0.5.1
+jsonschema==4.17.3
 psycopg2-binary==2.9.5
 PyJWT==2.6.0
+pyrsistent==0.19.3
 python-dotenv==0.21.1
 pytz==2022.7.1
+PyYAML==6.0
+six==1.16.0
 sqlparse==0.4.3
 tzdata==2022.7
+uritemplate==4.1.1
