--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,24 @@
 asgiref==3.6.0
 attrs==22.2.0
+Brotli==1.0.9
+colorama==0.4.6
+dj-database-url==1.2.0
 Django==4.1.7
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
 drf-spectacular==0.25.1
+gunicorn==20.1.0
 inflection==0.5.1
+iniconfig==2.0.0
 jsonschema==4.17.3
+packaging==23.0
+pluggy==1.0.0
 psycopg2-binary==2.9.5
+pycodestyle==2.10.0
 PyJWT==2.6.0
 pyrsistent==0.19.3
+pytest==7.2.1
+pytest-testdox==3.0.1
 python-dotenv==0.21.1
 pytz==2022.7.1
 PyYAML==6.0
@@ -16,3 +26,4 @@ six==1.16.0
 sqlparse==0.4.3
 tzdata==2022.7
 uritemplate==4.1.1
+whitenoise==6.4.0
